--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,36 @@ name = "berttest"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "test"
+path = "src/main.rs"
+
+[[bin]]
+name = "test_model"
+path = "src/test_model.rs"
+
+[[bin]]
+name = "test_model_1encode"
+path = "src/test_model_1encode.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 download-libtorch = ["tch/download-libtorch"]
 
-# test here
+#test
 [dependencies]
+#Task 1
 tch = "0.14.0"
 rust-bert = { version = "0.22.0", features = ["download-libtorch"] }
+csv = "1.1"  # Check for the latest version on crates.io
+
+actix-web = "4"
+actix-files = "0.6.0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1" 
+#llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
+rand = "0.8.5"
+log = "0.4"
+env_logger = "0.9"
+openssl = { version = "0.10.35", features = ["vendored"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
