--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 model/model.npz filter=lfs diff=lfs merge=lfs -text
 model/model.safetensors filter=lfs diff=lfs merge=lfs -text
 model/rust_model.ot filter=lfs diff=lfs merge=lfs -text
+static/open_llama_3b-q4_0-ggjt.bin filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
